# tropess_compression

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
code/: MUSES_compress_to_file_v2.py  MUSES_compression_v2.py  MUSES_decompress_from_file_v2.py
documentation/: MUSES_compression_instructions.txt  MUSES_compression_instructions.txt~  tropess_compression.tex
tropess_compression/: akc_compression.py  compress_tropess_file.py  decompress_tropess_file.py  netcdf_util.py
